tests/snapshots/example_basic_function.kem.snap
---
source: tests/common/snapshot_utils.rs
expression: content
---
// Basic function example
fn add(a: i64, b: i64) -> i64 {
    return a + b;
}
fn main() {
    let result: i64 = add(5, 3);
    println!("5 + 3 = {}", result);
}
