tests/snapshots/example_comments.kem.snap
---
source: tests/common/snapshot_utils.rs
expression: content
---
// This is a line comment
fn main() {
    // Variable declaration with comment
    let message: &str = "Hello, World!";
    /* This is a
       multi-line block comment
       that spans several lines */
    println!("{}", message);
    // Another line comment
    let number: i64 = 42; // Inline comment
    println!("{}", number);
}
