tests/snapshots/function_declarations.kem.snap
---
source: tests/common/snapshot_utils.rs
expression: content
---
fn add(a: i64, b: i64) {
    return a + b;
}
fn double(x: i64) {
    return x * 2;
}
