tests/snapshots/multiline_error_span.snap
---
source: tests/common/snapshot_utils.rs
expression: "format!(\"{:#}\", error)"
---
5:5: unexpected token: Expected Expected ')' after parameters, found Identifier("z")
