tests/snapshots/nested_expression_error.snap
---
source: tests/common/snapshot_utils.rs
expression: "format!(\"{:#}\", error)"
---
1:24: unexpected token: Expected expression, found RightParen
