tests/snapshots/parse_error_invalid_function.snap
---
source: tests/common/snapshot_utils.rs
expression: "format!(\"{:#}\", error)"
---
1:5: syntax error: Expected function name
